--- a/about-us.html
+++ b/about-us.html
@@ -282,7 +282,7 @@
       <div class="form-group mb-0 form-row align-items-center justify-content-center">
         <label for="subscribe" class="col-lg-auto mb-lg-0">Советы по стилю, новинки и распродажи. Подпишись:</label>
         <div class="col-sm-auto mb-2 mb-sm-0">
-          <input type="email" class="subscribe__form-control form-control" id="subscribe" placeholder="Ваша эл. почта" required="">
+          <input type="email" class="subscribe__form-control form-control rounded-lg" id="subscribe" placeholder="Ваша эл. почта" required="">
         </div>
         <div class="col-sm-auto">
           <button class="subscribe__btn btn btn-secondary">Подписаться</button>
