--- a/service-center.html
+++ b/service-center.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Оплата и доставка – производство зеркал и стеклянных изделий Liberta</title>
-  <meta name="description" content="Оплата и доставка украинского производителя, фабрика стекла Liberta.">
+  <title>Сервисный центр – производство зеркал и стеклянных изделий Liberta</title>
+  <meta name="description" content="Сервисный центр украинского производителя, фабрика стекла Liberta.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="format-detection" content="telephone=no">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -151,79 +151,84 @@
 
   </header>
 
-  <main class="delivery pt-20p pt-xl-0">
-    <div class="container">
+  <main class="service">
+    <section class="service__intro pt-20p pt-xl-0">
+      <div class="container">
+        <nav aria-label="breadcrumb" class="d-none d-xl-block">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="/">Главная</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Сервисный центр – производство зеркал и стеклянных изделий Liberta</li>
+          </ol>
+        </nav>
+        <h1>Сервисный центр Liberta</h1>
+        <ul class="row list-unstyled mt-60p mb-0">
+          <li class="col-3 d-flex align-items-center">
+            <img class="img-fluid mr-2" src="//liberta.ua/img/phone-icon.png" alt="">
+            <div>
+              <span class="d-block fs-14">Телефон:</span>
+              <a class="text-dark fs-18 font-weight-500 text-decoration-none" href="tel:+380965051030">+38(096)505-10-30</a>
+            </div>
+          </li>
+          <li class="col-3 d-flex align-items-center">
+            <img class="img-fluid mr-2" src="//liberta.ua/img/mail-icon.png" alt="">
+            <div>
+              <span class="d-block fs-14">Эл. почта:</span>
+              <a class="fs-18 font-weight-500 text-decoration-none" href="mailto:help@liberta.com.ua">help@liberta.com.ua</a>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <div class="container pt-20p">
       <div class="row">
-        <div class="col-xl-8 bg-white pb-60p">
-          <nav aria-label="breadcrumb" class="d-none d-xl-block">
-            <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="/">Главная</a></li>
-              <li class="breadcrumb-item active" aria-current="page">Оплата и доставка – производство зеркал и стеклянных изделий Liberta</li>
-            </ol>
-          </nav>
-          <h1>Оплата и доставка</h1>
-          <p>Поскольку мы производим зеркала по вашему индивидуальному заказу, нам необходимо получить предоплату вашего заказа.</p>
-          <section class="mt-5">
-            <h2>Способы доставки</h2>
-            <div class="row align-items-center mb-20p">
-              <div class="col-md-6 mb-3 mb-md-0">
-                <div class="row align-items-center">
-                  <div class="col-3 text-center">
-                    <img class="img-fluid" src="//liberta.ua/img/delivery-method-1.png" alt="">
-                  </div>
-                  <div class="col-9">
-                    <p class="mb-0">Aдресная доставка до вашего подъезда</p>
-                  </div>
+        <div class="col-8">
+          <form>
+            <fieldset class="service__step service__step--first">
+              <legend class="h2">Ваши контактные данные</legend>
+              <div class="form-group row">
+                <label for="order-number" class="col-md-3 col-form-label fs-14">Номер заказа <span class="text-muted">*</span></label>
+                <div class="col-md-6">
+                  <input type="text" id="order-number" class="form-control" required="">
+                  <div class="fs-12 text-muted">Номер - указан в техпаспорте изделия</div>
+                </div>
+                <div class="col-md-3">
+                  <div class="col-form-label invalid-feedback mt-0">Неверный номер заказа</div>
                 </div>
               </div>
-              <div class="col-md-6 mb-3 mb-md-0">
-                <div class="row align-items-center">
-                  <div class="col-3 text-center">
-                    <img class="img-fluid" src="//liberta.ua/img/delivery-method-2.png" alt="">
-                  </div>
-                  <div class="col-9">
-                    <p class="mb-0">Доставка в грузовое отделение Курьерской Службы Доставки</p>
-                  </div>
+              <div class="form-group row">
+                <label for="name" class="col-md-3 col-form-label fs-14">Имя и фамилия <span class="text-muted">*</span></label>
+                <div class="col-md-6">
+                  <input type="text" id="name" class="form-control" required="">
+                </div>
+                <div class="col-md-3">
+                  <div class="col-form-label invalid-feedback mt-0">Введите имя и фамилию</div>
                 </div>
               </div>
-            </div>
-            <p class="bg-pink p-20p">
-              <span class="text-secondary font-weight-bold">Внимание!</span> Перед получением, проверьте целостность продукции. Расписываясь в бланке приема при получении, вы соглашаетесь с тем, что товар поставлен в полном объеме и надлежащего качества.
-            </p>
-            <div class="d-xl-none">
+              <div class="form-group row">
+                <label for="phone" class="col-md-3 col-form-label fs-14">Телефон <span class="text-muted">*</span></label>
+                <div class="col-md-6">
+                  <input type="text" id="phone" class="form-control" placeholder="+38 ( xxx ) xxx-xx-xx" required="">
+                </div>
+                <div class="col-md-3">
+                  <div class="col-form-label invalid-feedback mt-0">Введите Ваш телефон</div>
+                </div>
+              </div>
+              <div class="form-group row">
+                <label class="col-md-3 col-form-label fs-14">Город</label>
+                <div class="col-md-6">
+
+                </div>
+              </div>
               <div class="row">
-                <div class="col-md-6">
-                  <div class="h5 mt-30p">Бесплатная доставка</div>
-                  <p>Мы бесплатно доставим выбранную вами продукцию в любой город Украины</p>
-                </div>
-                <div class="col-md-6">
-                  <img class="img-fluid" src="//liberta.ua/img/delivery-free-delivery.png.pagespeed.ce.7pIj7G4CMu.png" alt="">
+                <div class="col-md-6 offset-md-3">
+                  <button class="btn btn-primary" type="submit">Далее</button>
                 </div>
               </div>
-              <p class="border border-2 p-20p">Если служба доставки не дает вам возможность вскрыть упаковку — откажитесь от приема товара и <a href="/contacts">сообщите нам</a> о данном факте удобным для вас способом.</p>
-            </div>
-          </section>
-          <section class="mt-5">
-            <h2>Способы оплаты</h2>
-            <img class="mb-2" src="//liberta.ua/img/delivery-pay-method-2.png" alt="">
-            <div class="h6">Безналичными</div>
-            <p>Оплата по безналичному расчет производится в кассе отделения любого банка или с расчетного счета Вашей фирмы.</p>
-            <p>При выборе безналичного способа оплаты доставка заказа возможно после получения средств на наш расчетный счет.</p>
-          </section>
-          <section class="mt-5">
-            <h3 class="h2">Транспортная упаковка зеркал</h3>
-            <p>Все товары компании Liberta поставляются в упаковке из трехшарового брендированого гофрокартона. Дополнительную защиту от повреждений при транспортировке зеркал обеспечивает пенопласт. Упаковка также оборудована ручкой для удобной и безопасной транспортировки. Благодаря этому вероятность повреждения зеркала минимальна. Тем не менее, при получении зеркала в службе доставки, обязательно убедитесь, что изделие не повреждено. Вскройте упаковку при получении и проверьте зеркало.</p>
-            <div class="fs-14 font-weight-bold d-flex align-items-center">
-              <img class="mr-3" src="//liberta.ua/img/delivery-attention.png" alt="">
-              <p class="mb-0">Не ставьте продукцию на угол или торец, это может привести к сколам и трещинам!</p>
-            </div>
-          </section>
-        </div>
-        <div class="col-xl-4 bg-light fs-14 px-30p py-60p d-none d-xl-block">
-          <div class="h5">Бесплатная доставка</div>
-          <p>Мы бесплатно доставим выбранную вами продукцию в любой город Украины</p>
-          <img class="img-fluid d-block mx-auto" src="//liberta.ua/img/delivery-free-delivery.png" alt="">
-          <p class="border border-2 p-20p">Если служба доставки не дает вам возможность вскрыть упаковку — откажитесь от приема товара и <a href="/contacts">сообщите нам</a> о данном факте удобным для вас способом.</p>
+            </fieldset>
+            <fieldset class="service__step service__step--second">
+              <legend class="h2">Особенности изделия</legend>
+            </fieldset>
+          </form>
         </div>
       </div>
     </div>
