--- a/source/index.html
+++ b/source/index.html
@@ -24,6 +24,7 @@
       <a href="contacts.html" class="list-group-item list-group-item-action">Контакты</a>
       <a href="service-center.html" class="list-group-item list-group-item-action">Сервисный центр</a>
       <a href="blog.html" class="list-group-item list-group-item-action">Блог</a>
+      <a href="post.html" class="list-group-item list-group-item-action">Пост</a>
     </div>
   </div>
 
