--- a/blog.html
+++ b/blog.html
@@ -3,14 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Сервисный центр – производство зеркал и стеклянных изделий Liberta</title>
-  <meta name="description" content="Сервисный центр украинского производителя, фабрика стекла Liberta.">
+  <title>Блог – производство зеркал и стеклянных изделий Liberta</title>
+  <meta name="description" content="Все о производстве зеркал, душевых кабинах и межкомнатных дверей. Как правильно выбрать и установить. Советы от экспертов производителя Liberta.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="format-detection" content="telephone=no">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="preload" href="fonts/roboto-light.woff2" as="font" crossorigin="anonymous">
   <link rel="preload" href="fonts/KievitPro-ExtraBold.woff2" as="font" crossorigin="anonymous">
-  <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -152,170 +151,50 @@
 
   </header>
 
-  <main class="service">
-    <section class="service__intro pt-20p pt-xl-0">
-      <div class="container">
-        <nav aria-label="breadcrumb" class="d-none d-xl-block">
-          <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="/">Главная</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Сервисный центр – производство зеркал и стеклянных изделий Liberta</li>
-          </ol>
-        </nav>
-        <h1>Сервисный центр Liberta</h1>
-        <ul class="row list-unstyled mt-xl-60p mt-40p mb-0">
-          <li class="col-sm-auto d-flex align-items-center">
-            <img class="img-fluid mr-2" src="//liberta.ua/img/phone-icon.png" alt="">
-            <div>
-              <span class="d-block fs-14">Телефон:</span>
-              <a class="text-dark fs-18 font-weight-500 text-decoration-none" href="tel:+380965051030">+38(096)505-10-30</a>
+  <main class="blog pt-20p pt-xl-0 pb-50p">
+    <div class="container">
+      <nav aria-label="breadcrumb" class="d-none d-xl-block">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="/">Главная</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Блог</li>
+        </ol>
+      </nav>
+      <h1>Советы экспертов</h1>
+      <ul class="list-unstyled mb-0">
+        <li class="blog-post position-relative">
+          <div class="row no-gutters">
+            <div class="col-md-4 mb-3 mb-md-0">
+              <img class="img-fluid" src="//liberta.ua/uploads/blog/x1_ET8BI0lSvOW8w7z6xfI6YQ_1531818532.jpeg.pagespeed.ic.xonxIubZaI.webp" alt="">
             </div>
-          </li>
-          <li class="col-sm-auto offset-lg-1 mt-20p mt-sm-0 d-flex align-items-center">
-            <img class="img-fluid mr-2" src="//liberta.ua/img/mail-icon.png" alt="">
-            <div>
-              <span class="d-block fs-14">Эл. почта:</span>
-              <a class="fs-18 font-weight-500 text-decoration-none" href="mailto:help@liberta.com.ua">help@liberta.com.ua</a>
+            <div class="col-md-7 col-xl-7 offset-md-1 position-static">
+              <h2 class="mb-0 mb-sm-3">
+                <a href="/smart-zerkalo" class="blog-post__link stretched-link">Интерактивное зеркало: новый стиль жизни</a>
+              </h2>
+              <p class="mb-0 d-none d-sm-block">Smart Mirror: умное зеркало вместо смартфонаНовые технологии меняют наш быт и экономят драгоценное время. Умная техника, гаджеты, мобильные приложения их применение становится стилем жизни, делает ее проще и интереснее. Одна из новинок 2018 года интерактивное зеркало, которое станет помощником в бо...</p>
             </div>
-          </li>
+          </div>
+        </li>
+        <li class="blog-post position-relative">
+          <div class="row no-gutters">
+            <div class="col-md-4 mb-3 mb-md-0">
+              <img class="img-fluid" src="//liberta.ua/uploads/blog/xf9011fd18d3b7b231c6dafb0165eea05_1531742580.jpg.pagespeed.ic.xezMkwveUw.webp" alt="">
+            </div>
+            <div class="col-md-7 col-xl-7 offset-md-1 position-static">
+              <h2 class="mb-0 mb-sm-3">
+                <a href="/partitions-small-apartment" class="blog-post__link stretched-link">Стеклянные перегородки в дизайне маленькой квартиры</a>
+              </h2>
+              <p class="mb-0 d-none d-sm-block">Маленькая квартира - не проблема, если она правильно спланирована. Дизайнеры интерьера знают такие приемы, благодаря которым даже небольшое жилье кажется достаточно просторным для комфортной жизни. В этой статье расскажем, как стеклянные перегородки позволяют зонировать квартиру - эффективно и эффек...</p>
+            </div>
+          </div>
+        </li>
+      </ul>
+      <nav aria-label="Page navigation" class="mt-30p">
+        <ul class="pagination justify-content-center">
+          <li class="page-item active" aria-current="page"><span class="page-link">1</span></li>
+          <li class="page-item"><a class="page-link" href="/blog?page=2">2</a></li>
+          <li class="page-item"><a class="page-link" href="/blog?page=3">3</a></li>
         </ul>
-      </div>
-    </section>
-    <div class="container pt-md-20p pt-30p">
-      <div class="row">
-        <div class="col-xl-8">
-          <form>
-            <fieldset class="service__step service__step--first active">
-              <div class="d-flex align-items-baseline flex-wrap flex-sm-nowrap mb-3">
-                <legend class="service__step-title h2 mb-0">Ваши контактные данные</legend>
-                <button type="button" class="btn-unstyled text-primary fs-14 ml-sm-3 mt-2 mt-sm-0">Редактировать</button>
-              </div>
-              <div class="service__step-content">
-                <div class="form-group form-row">
-                  <label for="order-number" class="col-md-3 col-form-label fs-14">Номер заказа <span class="text-muted">*</span></label>
-                  <div class="col-md-6">
-                    <input type="text" id="order-number" class="form-control" required="">
-                    <div class="fs-12 text-muted">Номер - указан в техпаспорте изделия</div>
-                  </div>
-                  <div class="col-md-3">
-                    <div class="col-form-label invalid-feedback mt-0">Неверный номер заказа</div>
-                  </div>
-                </div>
-                <div class="form-group form-row">
-                  <label for="name" class="col-md-3 col-form-label fs-14">Имя и фамилия <span class="text-muted">*</span></label>
-                  <div class="col-md-6">
-                    <input type="text" id="name" class="form-control" required="">
-                  </div>
-                  <div class="col-md-3">
-                    <div class="col-form-label invalid-feedback mt-0">Введите имя и фамилию</div>
-                  </div>
-                </div>
-                <div class="form-group form-row">
-                  <label for="phone" class="col-md-3 col-form-label fs-14">Телефон <span class="text-muted">*</span></label>
-                  <div class="col-md-6">
-                    <input type="text" id="phone" class="form-control" placeholder="+38 ( xxx ) xxx-xx-xx" required="">
-                  </div>
-                  <div class="col-md-3">
-                    <div class="col-form-label invalid-feedback mt-0">Введите Ваш телефон</div>
-                  </div>
-                </div>
-                <div class="form-group form-row">
-                  <label class="col-md-3 col-form-label fs-14">Город</label>
-                  <div class="col-md-6">
-                    <select class="select-two" style="width: 100%" data-placeholder="Введите город">
-                      <option></option>
-                      <option>м. Луцьк (Волинська обл.)</option>
-                      <option>м. Лубни (Полтавська обл.)</option>
-                    </select>
-                  </div>
-                </div>
-                <div class="form-row">
-                  <div class="col-md-6 offset-md-3">
-                    <button class="btn btn-primary" type="submit">Далее</button>
-                  </div>
-                </div>
-              </div>
-            </fieldset>
-            <!-- add .active to show second step -->
-            <fieldset class="service__step service__step--second">
-              <legend class="service__step-title h2">Особенности изделия</legend>
-              <div class="service__step-content">
-                <div class="form-group form-row align-items-center">
-                  <label class="col-md-3 col-form-label fs-14">Пломба производителя</label>
-                  <div class="col-md-6">
-                    <div class="row">
-                      <div class="col-6">
-                        <div class="custom-control custom-radio">
-                          <input type="radio" id="seal-no" name="Repair[seal]" class="custom-control-input">
-                          <label class="custom-control-label" for="seal-no">Нарушена</label>
-                        </div>
-                      </div>
-                      <div class="col-6">
-                        <div class="custom-control custom-radio">
-                          <input type="radio" id="seal-yes" name="Repair[seal]" class="custom-control-input" checked="">
-                          <label class="custom-control-label" for="seal-yes">Не нарушена</label>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="form-group form-row align-items-center">
-                  <label class="col-md-3 col-form-label fs-14">Оригинальная упаковка</label>
-                  <div class="col-md-6">
-                    <div class="row">
-                      <div class="col-6">
-                        <div class="custom-control custom-radio">
-                          <input type="radio" id="packaging-yes" name="Repair[packaging]" class="custom-control-input" checked="">
-                          <label class="custom-control-label" for="packaging-yes">Есть</label>
-                        </div>
-                      </div>
-                      <div class="col-6">
-                        <div class="custom-control custom-radio">
-                          <input type="radio" id="packaging-no" name="Repair[packaging]" class="custom-control-input">
-                          <label class="custom-control-label" for="packaging-no">Нет</label>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="form-group form-row align-items-center">
-                  <label class="col-md-3 col-form-label fs-14">Паспорт на изделие</label>
-                  <div class="col-md-6">
-                    <div class="row">
-                      <div class="col-6">
-                        <div class="custom-control custom-radio">
-                          <input type="radio" id="passport-yes" name="Repair[passport]" class="custom-control-input" checked="">
-                          <label class="custom-control-label" for="passport-yes">Есть</label>
-                        </div>
-                      </div>
-                      <div class="col-6">
-                        <div class="custom-control custom-radio">
-                          <input type="radio" id="passport-no" name="Repair[passport]" class="custom-control-input">
-                          <label class="custom-control-label" for="passport-no">Нет</label>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="form-group form-row">
-                  <label for="text-input" class="col-md-3 col-form-label fs-14">Описание поломки</label>
-                  <div class="col-md-6">
-                    <textarea class="form-control" name="Repair[description]" id="text-input" rows="3"></textarea>
-                    <label class="text-primary fs-12 font-weight-500 cursor-pointer mt-2">
-                      <input type="file" class="sr-only">
-                      <span>Прикрепить фото</span>
-                    </label>
-                  </div>
-                </div>
-                <div class="form-row">
-                  <div class="col-md-9 text-right">
-                    <button type="submit" class="btn btn-secondary btn-lg">Отправить заявку</button>
-                  </div>
-                </div>
-              </div>
-            </fieldset>
-          </form>
-        </div>
-      </div>
+      </nav>
     </div>
   </main>
 
@@ -418,12 +297,6 @@
 
 
   <script src="js/scripts.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-  <script>
-    $(document).ready(function () {
-      $('.select-two').select2();
-    });
-  </script>
 </body>
 
 </html>
