--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       <a href="garranty-and-return.html" class="list-group-item list-group-item-action">Гарантия и возврат</a>
       <a href="contacts.html" class="list-group-item list-group-item-action">Контакты</a>
       <a href="service-center.html" class="list-group-item list-group-item-action">Сервисный центр</a>
+      <a href="blog.html" class="list-group-item list-group-item-action">Блог</a>
+      <a href="post.html" class="list-group-item list-group-item-action">Пост</a>
     </div>
   </div>
 
