--- a/source/index.html
+++ b/source/index.html
@@ -25,6 +25,7 @@
       <a href="service-center.html" class="list-group-item list-group-item-action">Сервисный центр</a>
       <a href="blog.html" class="list-group-item list-group-item-action">Блог</a>
       <a href="post.html" class="list-group-item list-group-item-action">Пост</a>
+      <a href="showrooms.html" class="list-group-item list-group-item-action">Адреса шоурумов</a>
     </div>
   </div>
 
