--- a/source/index.html
+++ b/source/index.html
@@ -26,6 +26,7 @@
       <a href="blog.html" class="list-group-item list-group-item-action">Блог</a>
       <a href="post.html" class="list-group-item list-group-item-action">Пост</a>
       <a href="showrooms.html" class="list-group-item list-group-item-action">Адреса шоурумов</a>
+      <a href="dnepr.html" class="list-group-item list-group-item-action">Шоурум в городе</a>
     </div>
   </div>
 
