--- a/source/index.html
+++ b/source/index.html
@@ -27,6 +27,7 @@
       <a href="post.html" class="list-group-item list-group-item-action">Пост</a>
       <a href="showrooms.html" class="list-group-item list-group-item-action">Адреса шоурумов</a>
       <a href="dnepr.html" class="list-group-item list-group-item-action">Шоурум в городе</a>
+      <a href="mirrors-smart.html" class="list-group-item list-group-item-action">Лендинг зеркал смарт</a>
     </div>
   </div>
 
