Лендинг зеркал смарт - товары

--- a/source/mirrors-smart.html
+++ b/source/mirrors-smart.html
@@ -214,6 +214,42 @@
       <div class="section-parallax__bg"></div>
     </section>
 
+    <section id="products" class="bg-black text-white pt-60p pb-40p">
+      <div class="container">
+        <h2 class="h1 text-center mb-40p">Выберите SMART MIRROR</h2>
+        <div class="row row-16 mb-n3">
+          <div class="col-md-4 mb-3">
+            <div class="product-card">
+              <img class="product-card__img" src="//liberta.ua/img/smart-800_600-23.png" alt="">
+              <a href="/smart-800x600" class="product-card__name stretched-link mt-30p">SMART MIRROR 800х600 / 23.6”</a>
+              <div class="mt-10p">44 890 грн.</div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="product-card">
+              <img class="product-card__img" src="//liberta.ua/img/smart-1000_700.png" alt="">
+              <a href="/smart-1000x700" class="product-card__name stretched-link mt-30p">SMART MIRROR 1000х700 / 23.6”</a>
+              <div class="mt-10p">53 890 грн.</div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="product-card">
+              <img class="product-card__img" src="//liberta.ua/img/smart-1200_800.png" alt="">
+              <a href="/smart-1200x800" class="product-card__name stretched-link mt-30p">SMART MIRROR 1200х800 / 43.0”</a>
+              <div class="mt-10p">121 690 грн.</div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="product-card">
+              <img class="product-card__img" src="//liberta.ua/img/smart-600_800-21.png" alt="">
+              <a href="/smart-600x800" class="product-card__name stretched-link mt-30p">SMART MIRROR 600х800 / 21.5”</a>
+              <div class="mt-10p">43 290 грн.</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
   </main>
 
   <include src="source/include/footer.html"></include>
